added docker deployment

--- a/kafka-producer/src/main/resources/application.properties
+++ b/kafka-producer/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-server.port=8083
-#spring.kafka.producer.bootstrap-servers= localhost:9092
-#spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
-#spring.kafka.producer.properties.spring.json.type.mapping=student:com.example.kafkaproducer.model.Student
-#spring.kafka.producer.properties.spring.json.trusted.packages=*
+server.port=8085
+#spring.kafka.consumer.bootstrap-servers=localhost:9092 #local broker
+spring.kafka.producer.bootstrap-servers= kafka:9092
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=student:com.example.kafkaproducer.model.Student
+spring.kafka.producer.properties.spring.json.trusted.packages=*
